--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,9 @@ local.settings.json
 __blobstorage__
 __queuestorage__
 __azurite_db*__.json
+
+# Playwright artifacts
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/pw-report
